[gd_scene load_steps=3 format=1]

[ext_resource path="res://themes/Vert.tres" type="Theme" id=1]
[ext_resource path="res://Title/WorldSelect.gd" type="Script" id=2]

[node name="WorldSelect" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 144.0
margin/top = 43.0
margin/right = 355.0
margin/bottom = 299.0
script/script = ExtResource( 2 )

[node name="box" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 207.0
margin/bottom = 252.0
alignment = 0

[node name="Label" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 203.0
margin/bottom = 8.0
text = "World Select"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WorldList" type="ItemList" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 12.0
margin/right = 203.0
margin/bottom = 208.0

[node name="New" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 212.0
margin/right = 203.0
margin/bottom = 228.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start New World"
flat = false

[node name="Actions" type="HBoxContainer" parent="box"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 232.0
margin/right = 203.0
margin/bottom = 248.0
alignment = 0

[node name="Back" type="Button" parent="box/Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 11.0
margin/top = 0.0
margin/right = 54.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Go Back!"
flat = false

[node name="Delete" type="Button" parent="box/Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 71.0
margin/top = 0.0
margin/right = 131.0
margin/bottom = 16.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete World"
flat = false

[node name="Load" type="Button" parent="box/Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 144.0
margin/top = 0.0
margin/right = 197.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load World"
flat = false

[connection signal="item_activated" from="box/WorldList" to="." method="_on_WorldList_item_activated"]

[connection signal="pressed" from="box/New" to="." method="_on_New_pressed"]

[connection signal="pressed" from="box/Actions/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="box/Actions/Delete" to="." method="_on_Delete_pressed"]

[connection signal="pressed" from="box/Actions/Load" to="." method="_on_Load_pressed"]


